add category list endpoint
